--- a/colors.css
+++ b/colors.css
@@ -1,7 +1,7 @@
 @media only screen {
   :root {
     --Orange: #F5CB5C;
-    --Grey: #333533;
+    --Grey: #787c78;
     --Black: #242423;
     --LightGrey: #DCE4DA;
     --LightOrange:#EFDC9E;
