--- a/colors.css
+++ b/colors.css
@@ -1,9 +1,9 @@
 @media only screen {
   :root {
     --Orange: #F5CB5C;
-    --Grey: #787c78;
+    --Grey: #c5c5c5;
     --Black: #242423;
-    --LightGrey: #DCE4DA;
+    --LightGrey: #f5f5f5;
     --LightOrange:#EFDC9E;
   }
 }
